Fått till JavaScripten och påbörjat CSS

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projektuppgift</title>
     <script src="./js/main.js"></script>
+    <script src="https://kit.fontawesome.com/8726bca3f8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/main.scss">
 </head>
 <body>
-    <input type="text" placeholder="Sök författare..." id="searchInput">
-    <button type="submit" id="searchBtn"></button>
+    <h1>Find your dog breed!</h1>
+    <div id="searchField">
+        <input type="text" placeholder="Search for a breed..." id="searchInput">
+        <button type="submit" id="searchBtn"><i class="fa-solid fa-paw fa-xl"></i></button>
+    </div>
+    <div id="dogs">
+    </div>
+    <div id="dogsInfo">
+    </div>
 </body>
 </html>
