Lagt till bild för laddningsanimation och kod för att visa och gömma denna

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
         <input type="text" placeholder="Search for a breed..." id="searchInput">
         <button type="submit" id="searchBtn"><i class="fa-solid fa-paw fa-xl"></i></button>
     </div>
+    <div id="loader">
+        <img src="./images/pawprint.svg" alt="Tassavtryck" id="loadImg">
+    </div>
     <div id="dogs">
     </div>
     <div id="dogsInfo">
