--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
     <script src="./js/main.js"></script>
     <script src="https://kit.fontawesome.com/8726bca3f8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/main.scss">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Kalam:wght@300;400;700&display=swap" rel="stylesheet"></head>
 <body>
     <h1>Find your dog breed!</h1>
     <div id="searchField">
