Lagt till en footer med lite info

--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Kalam:wght@300;400;700&display=swap" rel="stylesheet"></head>
 <body>
-    <h1>Find your dog breed!</h1>
-    <div id="searchField">
-        <input type="text" placeholder="Search for a breed..." id="searchInput">
-        <button type="submit" id="searchBtn"><i class="fa-solid fa-paw fa-xl"></i></button>
-    </div>
-    <div id="loader">
-        <img src="./images/pawprint.svg" alt="Tassavtryck" id="loadImg">
-    </div>
-    <div id="dogs">
-    </div>
-    <div id="dogsInfo">
-    </div>
-    
+    <main>
+        <h1>Find your dog breed!</h1>
+        <div id="searchField">
+            <input type="text" placeholder="Search for a breed..." id="searchInput">
+            <button type="submit" id="searchBtn"><i class="fa-solid fa-paw fa-xl"></i></button>
+        </div>
+        <div id="loader">
+            <img src="./images/pawprint.svg" alt="Tassavtryck" id="loadImg">
+        </div>
+        <div id="dogs">
+        </div>
+        <div id="dogsInfo">
+        </div>
+    </main>
+    <footer>
+        <p>Projektuppgift för kursen DT211G, Frontend-baserad webbutveckling.</p>
+        <p>© Copyright 2024 Emma Ådahl Görling</p>
+        <p><a href="https://rapidapi.com/myapos--FqlEzvrlv/api/dog-breeds2/details">Dog breeds</a> from Rapid API & <a href="https://api-ninjas.com/api/dogs">Dogs API</a> from API Ninjas</p>
+    </footer>
 </body>
 </html>
