--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <script src="./js/main.js"></script>
     <script src="https://kit.fontawesome.com/8726bca3f8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/main.scss">
+    <link rel="icon" type="image/x-icon" href="./images/pawprint.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Kalam:wght@300;400;700&display=swap" rel="stylesheet"></head>
